deploy/ubik-proxy/proxy-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubik-proxy
  labels:
    app: ubik-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubik-proxy
  template:
    metadata:
      labels:
        app: ubik-proxy
    spec:
      containers:
      - name: ubik-proxy
        image: ubik-proxy-test:latest 
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ubik-proxy
spec:
  selector:
    app: ubik-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubik-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ubik-proxy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ubik-proxy
            port:
              number: 80
